// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders Col correctly 1`] = `
<styled.div
  className="myClass"
  lg={8}
  md={6}
  sm={4}
  style={
    Object {
      "width": "50px",
    }
  }
  xs="hidden"
/>
`;

exports[`Grid renders Grid correctly 1`] = `
<styled.div
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;

exports[`Grid renders Grid with Row & Col correctly 1`] = `
<Grid
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
>
  <styled.div
    className="myClass"
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <div
      className="sc-eCApGN iMMBxK myClass"
      style={
        Object {
          "width": "50px",
        }
      }
    >
      <Row
        className="myClass"
        style={
          Object {
            "width": "50px",
          }
        }
      >
        <styled.div
          className="myClass"
          style={
            Object {
              "width": "50px",
            }
          }
        >
          <div
            className="sc-jSFkmK llyqsH myClass"
            style={
              Object {
                "width": "50px",
              }
            }
          >
            <Col
              className="myClass"
              lg={8}
              md={6}
              sm={4}
              style={
                Object {
                  "width": "50px",
                }
              }
              xs="hidden"
            >
              <styled.div
                className="myClass"
                lg={8}
                md={6}
                sm={4}
                style={
                  Object {
                    "width": "50px",
                  }
                }
                xs="hidden"
              >
                <div
                  className="sc-gKAblj gucgaE myClass"
                  style={
                    Object {
                      "width": "50px",
                    }
                  }
                >
                  Col
                </div>
              </styled.div>
            </Col>
          </div>
        </styled.div>
      </Row>
    </div>
  </styled.div>
</Grid>
`;

exports[`Grid renders Row correctly 1`] = `
<styled.div
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;
